Edit location index

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,10 +1,14 @@
 <h1>Locations</h1>
-<% @locations.each do |location| %>
-  <% if location.photo %>
-    <%= image_tag(location.photo.link, alt: 'logo', style: "height: 100px; width: 100px;") %><br>
-  <% end %>
-  <%= location.name %><br>
-  <%= location.city %><br>
-  <%= location.country %><br>
-  <%= location.address %>
+<ul>
+  <% @locations.each do |location| %>
+  <li>
+    <% if location.photo %>
+      <%= image_tag(location.photo.link, alt: 'logo', style: "height: 100px; width: 100px;") %><br>
+    <% end %>
+    <%= location.name %><br>
+    <%= location.city %><br>
+    <%= location.country %><br>
+    <%= location.address %><br><br><br>
+  </li>
 <% end %>
+</ul>
