--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,28 +1,45 @@
-<%= form_with(url: available_rooms_path, method: :get, local: true) do |form| %>
-  <div>
-    <%= form.label :location_id, "Location ID" %>
-    <%= form.select :location_id,
-      @locations.map { |location| [location.name, location.id] },
-      class: 'form-select',
-      'aria-label': 'Default select example' %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <h1>Find Your Perfect Stay</h1>
+    <% if logged_in? %>
+      <%= form_with(url: available_rooms_path, method: :get, local: true) do |form| %>
+        <div class="form-group">
+          <%= form.label :location_id, "Location", class: 'form-label' %>
+          <%= form.select :location_id,
+            @locations.map { |location| [location.name, location.id] },
+            {},
+            class: 'form-control',
+            aria: { label: 'Default select example' } %>
+        </div>
+        <div>
+          <%= form.label :check_in_date, "Check-in date" %>
+          <%= form.date_field :check_in_date, class: 'form-control' %>
+        </div>
+        <div>
+          <%= form.label :check_out_date, "Check-out date" %>
+          <%= form.date_field :check_out_date, class: 'form-control' %>
+        </div>
+        <div>
+          <%= form.label :adults_count, "Number of adults" %>
+          <%= form.number_field :adults_count, class: 'form-control' %>
+        </div>
+        <div>
+          <%= form.label :children_count, "Number of children" %>
+          <%= form.number_field :children_count, class: 'form-control' %>
+        </div>
+        <br>
+        <div class="text-center">
+          <%= form.label :is_smoke_free, "Would you prefer a smoke-free room?" %>
+          <%= form.check_box :is_smoke_free, { default: true } %>
+        </div>
+        <br>
+        <div class="text-center">
+          <%= form.submit "Search", class:"btn btn-primary" %>
+        </div>
+      <% end %>
+    <% else %>
+    Sign up and login to reserve a room
+    <%= link_to "Sign up now!", signup_path, class:"btn btn-primary" %>
+    <% end %>
   </div>
-  <div>
-    <%= form.label :check_in_date, "Check-in date" %>
-    <%= form.date_field :check_in_date %>
-  </div>
-  <div>
-    <%= form.label :check_out_date, "Check-out date" %>
-    <%= form.date_field :check_out_date %>
-  </div>
-  <div>
-    <%= form.label :adults_count, "Number of adults" %>
-    <%= form.number_field :adults_count %>
-  </div>
-  <div>
-    <%= form.label :children_count, "Number of children" %>
-    <%= form.number_field :children_count %>
-  </div>
-  <div>
-    <%= form.submit "Search" %>
-  </div>
-<% end %>
+</div>
