--- a/app/views/hotel_listings_manager/manage_room_numbers/edit.html.erb
+++ b/app/views/hotel_listings_manager/manage_room_numbers/edit.html.erb
@@ -7,7 +7,7 @@
     <li><%= link_to "Edit Room Number",  edit_hotel_listings_manager_room_manage_room_number_path %></li>
   </ol>
 </nav>
-<h1>Edit Room Numbers</h1>>
+<h1>Edit Room Number</h1>>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render "form", room_number: @room_number %>
