--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -53,5 +53,6 @@
         <%= link_to "Cancel", retrieve_last_page_or_default(default_path: root_path), class: "btn", data: { turbo_confirm: "You sure?"}%>
       </div>
     <% end %>
+    <p>Already have an account? <%= link_to "Login", login_path %></p>
   </div>
 </div>
